@@ -2,6 +2,7 @@ Version 0.1045:
 - Add standard tests
 - Fix compatibility issue with newer versions of perl, which remove "." from
   @INC.
+- Check in standard tests, including one that skips the compile check on Windows
 
 Version 0.1044: Sat May 2 2015
 - Prevent CPAN from indexing private-lib
